--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
 			</nav>
 			<div class="title ">
-				<h1>SINDI'S PORTFOLIO WEBSITE</h1>
+				<h1>Sindiswa Khama</h1>
             </div>
         </div>
 	</header>
