--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 </div>
 			</nav>
 			<div class="title ">
-				<h1>Sindiswa Khama</h1>
+				<h1>Hey , I'm Sindiswa Khama</h1>
             </div>
         </div>
 	</header>
     <div class="main-body">
         <div class="grid-about" id="about">
             <div class="about-item1">
-                <h1>About Sindiswa</h1>
+                <h1>About Me</h1>
             </div>
             <div class="about-item2">
-                <p>A young resilient ,motivated and hardworking individual determined to take every opportunity presented to learn and grow in the IT field. Currently holding B.Tech in IT Software Development and have been
+                <p>A resilient ,motivated and hardworking individual determined to take every opportunity presented to learn and grow in the IT field. Currently holding B.Tech in IT Software Development and have been
                      afforded the opportunity to partake in a Systems Development learnership at Umuzi.
                     I belive that my hunger for knowledge and determination to turn information into action will contribute to me having a successful career.  </p>
             </div>
